--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
       padding: 15px 20px; font-size: 18px;
       color: #ccc; background: none; border: none; cursor: pointer;
       display: block;
+      text-decoration: none;
     }
     .menu-item > a:hover,
     .menu-item > button:hover { background: #333; color: #fff; }
