--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
     main#content { flex: 1; padding: 20px; overflow-y: auto; width: 100%; }
 
     #menuButton {
-      position: fixed; top: 10px; left: 10px; z-index: 1100;
+	
+      position: fixed; top: 8px; left: 10px; z-index: 1100;
       padding: 10px 15px; font-size: 1rem;
       background: #222; color: #fff; border: none; cursor: pointer;
 	  border-radius: 8px;
@@ -35,11 +36,11 @@
     }
 
     nav.menu ul { list-style: none; }
-    .menu-item { border-bottom: 1px solid #222; }
+    .menu-item { border-bottom: 2px solid #222; }
     .menu-item > a,
     .menu-item > button {
       width: 100%; text-align: left;
-      padding: 15px 20px; font-size: 18px;
+      padding: 15px 15px; font-size: 18px;
       color: #ccc; background: none; border: none; cursor: pointer;
       display: block;
 	  text-decoration: none;
@@ -67,7 +68,7 @@
 
     @media (max-width: 600px) {
       aside#sidebar { width: 200px; }
-      #menuButton { font-size: 0.9rem; padding: 8px 12px; }
+      #menuButton { position: fixed; top: 11px; left: 15px; font-size: 0.9rem; padding: 8px 12px; }
       .menu-item > a, .menu-item > button { font-size: 16px; padding: 12px 16px; }
       .submenu li a { font-size: 14px; padding: 10px 30px; }
 	  
@@ -77,7 +78,7 @@
 	  top: 0;
 	  left: 0;
 	  width: 100%;
-	  height: 65px;
+	  height: 58px;
 	  background: #111;
 	  z-index: 1100;
 	  display: flex;
@@ -86,7 +87,7 @@
 	  padding: 0 15px;
 	  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
 	}
-		#logoBlock img {
+	#logoBlock img {
 	  height: 28px;
 	  width: auto;
 	  border-radius: 4px;
@@ -96,6 +97,7 @@
 	  display: flex;
 	  align-items: center;
 	  
+
 	  gap: 8px;
 	  color: #eee;
 	  font-size: 1rem;
@@ -109,7 +111,7 @@
   <div id="topbar">
 	<button id="menuButton">☰ Навигация</button>
 	<div id="logoBlock">
-	  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSi4Tj85AGsKm-fNSnR4e74MIBVlCsZ-kNuKw&s" alt="Логотип" />
+	  <img src="https://www.dropbox.com/scl/fi/l9jdtpa354jl5u7azk62j/rounded-in-photoretrica.png?rlkey=bd0mgi47sq40u8fvdvsd682xo&st=jhaeoguo&raw=1" alt="Логотип" />
 	  <span>DebDub</span>
   </div>
 </div>
