--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
 		<p>Эту страницу я кстати стилизую под "кто мы" и тд, как вам идея?</p>
       </section>
 	 <section id="meme" style="display: none; text-align: center; margin-top: 10px;">
-		<p>Рикролла больше нет, но я думаю что сюда вставить</p>
+		<p>Нашел как-то монтажер дилдо, а оно ему как раз</p>
 	  </section>
-	  <section id="deion" style="display: none; text-align: center; margin-top: 10px;">
-		<img src="https://www.dropbox.com/scl/fi/mkfkg4sfkmc9qd1tbsgps/logo2.png?rlkey=p2gju3y44ci0stgkam2sc81rs&st=t07swefu&raw=1" alt="D-ON!" style="max-width: 100%; height: 150px;">
+	  <section id="deion" style="display: none; text-align: center; margin-top: 10px; z-index: 1;">
+		<img src="https://www.dropbox.com/scl/fi/mkfkg4sfkmc9qd1tbsgps/logo2.png?rlkey=p2gju3y44ci0stgkam2sc81rs&st=t07swefu&raw=1" alt="D-ON!" style="max-width: 100%; height: 150px; z-index: 1;">
 	  </section>
 	  <section id="ulss" style="display: none; text-align: center; margin-top: 10px;">
 		<img src="https://www.dropbox.com/scl/fi/u15u8hnv7vf3u7smaoqnu/.gif?rlkey=eysm0m5zdh3tisejkx3mxv1le&st=k6e8bqpg&raw=1" alt="DgSt!" style="max-width: 100%; height: 150px;">
@@ -63,6 +63,8 @@
 		  <source src="" type="video/mp4">
 	    </video>
 	  </div>
+      <img id="bgLeft" class="sideBackground">
+      <img id="bgRight" class="sideBackground">
     </main>
   </div>
   <script src="./script.js"></script>
