--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
 	 <section id="meme" style="display: none; text-align: center; margin-top: 10px;">
 		<p>Нашел как-то монтажер дилдо, а оно ему как раз</p>
 	  </section>
-	  <section id="deion" style="display: none; text-align: center; z-index: 1;">
+	  <section id="deion" style="display: none; text-align: center; z-index: 1; padding-top: 20px">
 		<img src="https://www.dropbox.com/scl/fi/mkfkg4sfkmc9qd1tbsgps/logo2.png?rlkey=p2gju3y44ci0stgkam2sc81rs&st=t07swefu&raw=1" alt="D-ON!" style="max-width: 100%; height: 150px; z-index: 1;">
 	  </section>
-	  <section id="ulss" style="display: none; text-align: center;">
+	  <section id="ulss" style="display: none; text-align: center; padding-top: 20px">
 		<img src="https://www.dropbox.com/scl/fi/u15u8hnv7vf3u7smaoqnu/.gif?rlkey=eysm0m5zdh3tisejkx3mxv1le&st=k6e8bqpg&raw=1" alt="DgSt!" style="max-width: 100%; height: 150px;">
 	  </section>
 	  
