--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
 <body>
   <div id="topbar">
 	<button id="menuButton">☰ Навигация</button>
+	<div id="pageName">
+	  <p></p>
+	</div>
 	<div id="logoBlock">
 	  <img src="https://www.dropbox.com/scl/fi/l9jdtpa354jl5u7azk62j/rounded-in-photoretrica.png?rlkey=bd0mgi47sq40u8fvdvsd682xo&st=jhaeoguo&raw=1" alt="Логотип" />
 	  <span>DebDub</span>
+    </div>
   </div>
-</div>
   <div id="wrapper">
     <aside id="sidebar">
       <nav class="menu">
