--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<div id="pageName">
 	  <p></p>
 	</div>
+	<div id="easterHint" class="hidden">В меню что-то появилось...</div>
 	<div id="logoBlock">
 	  <img src="https://www.dropbox.com/scl/fi/l9jdtpa354jl5u7azk62j/rounded-in-photoretrica.png?rlkey=bd0mgi47sq40u8fvdvsd682xo&st=jhaeoguo&raw=1" alt="Логотип" />
 	  <span>DebDub</span>
